# app-kilonova

./: .gitignore  Cargo.toml  README.md  build_loader.sh  config.toml  config.yaml  model.yaml  plot.py  setup.py
inputs/: halo_kilonova.yaml
knc_loader/: Cargo.toml
knc_loader/src/: lib.rs
knc_reader/: .gitignore  Cargo.toml  setup.py
knc_reader/knc_reader/: __init__.py
knc_reader/src/: lib.rs
knc_tools/: .gitignore  Cargo.toml  movie.py  plot.py  products.py  setup.py  u_scalar_profile.py
knc_tools/knc_tools/: __init__.py  plot.py
knc_tools/src/: lib.rs
loader/: Cargo.toml
setups/: halo_kilonova.yaml  jet_in_cloud.toml  jet_in_cloud.yaml  jet_in_star.yaml  kinetic_bomb.yaml  wind_shock.yaml
src/: app.rs  ascii_lookup.rs  galmod.rs  io.rs  lib.rs  lookup_table.rs  lookup_table_v2.rs  main.rs  mesh.rs  model_halo_kilonova.rs  physics.rs  products.rs  scheme.rs  state.rs  tasks.rs  traits.rs  yaml_patch.rs
src/models/: halo_kilonova.rs  jet_in_cloud.rs  jet_in_star.rs  kinetic_bomb.rs  mod.rs  wind_shock.rs  windsr.rs
src/physics/: mod.rs  newtonian_hydro.rs  relativistic_hydro.rs
tools/: analysis.py  movie  plot  show-config
tools/knc_tools/: __init__.py  movie.py  products.py  timed.py
tools/src/: lib.rs
