[package]
name        = "kilonova"
version     = "0.1.0"
edition     = "2018"
description = "Clemson Kilonova Code (KNC)"
authors     = ["J. Zrake"]
readme      = "README.md"
repository  = "https://github.com/clemson-cal/app-kilonova"


[dependencies]
anyhow          = "1.0"
async-trait     = "0.1"
futures         = "0.3"
git-version     = "0.3"
num_cpus        = "1.0"
serde-pickle    = "0.6"
serde_yaml      = "0.8"
toml            = "0.5"
ndarray         = { version = "0.13", features = ["serde"] }
num             = { version = "0.3",  features = ["serde"] }
serde           = { version = "1.0",  features = ["derive"] }
tokio           = { version = "0.3",  features = ["rt-multi-thread"] }


hydro-srhd      = { git = "https://github.com/clemson-cal/hydro-srhd"  }
godunov-core    = { git = "https://github.com/clemson-cal/godunov-core" }
ndarray-ops     = { git = "https://github.com/clemson-cal/ndarray-ops" }


[profile.release]
lto = "thin"
