[package]
name        = "kilonova"
version     = "0.1.0"
edition     = "2018"
description = "Clemson Kilonova Code"
authors     = ["J. Zrake"]
readme      = "README.md"
repository  = "https://github.com/clemson-cal/app-kilonova"


[features]
default = ["serde_cbor"]


[dependencies]
anyhow          = "1.0"
async-trait     = "0.1"
futures         = "0.3"
git-version     = "0.3"
num_cpus        = "1.0"
serde_yaml      = "0.8"
enum_dispatch   = "0.3"
serde_cbor      = { version = "0.11", optional = true }
snap            = { version = "1.0",  optional = true }
ndarray         = { version = "0.14", features = ["serde"] }
num             = { version = "0.3",  features = ["serde"] }
serde           = { version = "1.0",  features = ["derive"] }
tokio           = { version = "1.0",  features = ["rt-multi-thread"] }

hydro-srhd      = { git = "https://github.com/clemson-cal/hydro-srhd",   features = ["serde"] }
godunov-core    = { git = "https://github.com/clemson-cal/godunov-core", features = ["serde"] }
ndarray-ops     = { git = "https://github.com/clemson-cal/ndarray-ops" }


[profile.release]
lto = "thin"
